--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
               <heading>News</heading>
               <p>
                 <ul>
-                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2022: Two papers on <a href="https://www.bmvc2022.org/programme/papers/#:~:text=272.%20Learning%20to,Seoul%20National%20University)*", target="_blank">virtual try-on</a> and <a href="https://www.bmvc2022.org/programme/papers/#:~:text=302.%20Towards%20Efficient%20Neural,Research%20%26%20Seoul%20National%20University)", target="_blank">efficient NeRFs</a> were accepted to <a href="https://www.bmvc2022.org/", target="_blank">BMVC 2022</a></li>
-                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on <a href="https://openaccess.thecvf.com/content/CVPR2022W/CVFAD/html/Lee_Towards_Detailed_Characteristic-Preserving_Virtual_Try-On_CVPRW_2022_paper.html", target="_blank">virtual try-on</a> was selected as an oral presentation (top 5 papers) at <a href="https://sites.google.com/view/cvfad2022/home", target="_blank">CVPR Workshop 2022</a></li>
-                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2022: Paper on <a href="https://www.mdpi.com/2072-6643/14/6/1170", target="_blank">meta analysis of clinical trials</a> was selected as issue cover on <a href="https://www.mdpi.com/2072-6643/14/6", target="_blank">Nutrients</a></li>
+                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on <a href="https://arxiv.org/abs/2201.05277", target="_blank">scene boundary segmentation</a> was accepted to <a href="https://accv2022.org/en/", target="_blank">ACCV 2022</a></li>
+                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2022: Started working with KakaoBrain as research intern</li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2021: Started MS in Data Science at <a href="https://gsds.snu.ac.kr/", target="_blank">Seoul National University Graduate School of Data Science</a></li>
                 </ul>
               </p>
@@ -100,105 +99,6 @@
               <em>BMVC</em>, 2022
               <br>
               <a href="https://www.bmvc2022.org/programme/papers/#:~:text=272.%20Learning%20to,Seoul%20National%20University)*">paper</a>
-            </td>
-          </tr>
-		
-         <tr onmouseout="cfnsg_stop()" onmouseover="cfnsg_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='cfnsg_image'>
-                  <img src='images/cfnsg2.png' width="160"></div>
-                <img src='images/cfnsg1.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function cfnsg_start() {
-                  document.getElementById('cfnsg_image').style.opacity = "1";
-                }
-
-                function cfnsg_stop() {
-                  document.getElementById('cfnsg_image').style.opacity = "0";
-                }
-                cfnsg_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.bmvc2022.org/programme/papers/#:~:text=302.%20Towards%20Efficient%20Neural,Research%20%26%20Seoul%20National%20University)">
-                <papertitle>Towards Efficient Neural Scene Graphs by Learning Consistency Fields</papertitle>
-              </a>
-              <br>
-              Yeji Song, Chaerin Kong, <strong>Seoyoung Lee</strong>,
-		    Nojun Kwak, Joonseok Lee
-              <br>
-              <em>BMVC</em>, 2022 
-              <br>
-              <a href="https://www.bmvc2022.org/programme/papers/#:~:text=302.%20Towards%20Efficient%20Neural,Research%20%26%20Seoul%20National%20University)">paper</a>
-              <p></p>
-            </td>
-          </tr>
-		
-         <tr onmouseout="dpvton_stop()" onmouseover="dpvton_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='dpvton_image'>
-                  <img src='images/dpvton2.png' width="160"></div>
-                <img src='images/dpvton1.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function dpvton_start() {
-                  document.getElementById('dpvton_image').style.opacity = "1";
-                }
-
-                function dpvton_stop() {
-                  document.getElementById('dpvton_image').style.opacity = "0";
-                }
-                dpvton_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://openaccess.thecvf.com/content/CVPR2022W/CVFAD/html/Lee_Towards_Detailed_Characteristic-Preserving_Virtual_Try-On_CVPRW_2022_paper.html">
-                <papertitle>Towards Detailed Characteristic-Preserving Virtual Try-On</papertitle>
-              </a>
-              <br>
-              Sangho Lee*, <strong>Seoyoung Lee*</strong>,
-		    Joonseok Lee
-              <br>
-              <em>CVPR Workshops</em>, 2022 &nbsp <font color=#FF8080><strong>(Oral Presentation)</strong></font>
-              <br>
-              <a href="https://openaccess.thecvf.com/content/CVPR2022W/CVFAD/html/Lee_Towards_Detailed_Characteristic-Preserving_Virtual_Try-On_CVPRW_2022_paper.html">paper</a>
-              <p></p>
-            </td>
-          </tr>
-		
-         <tr onmouseout="metaanalysis_stop()" onmouseover="metaanalysis_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='metaanalysis_image'>
-                  <img src='images/meta_analysis_scatterplot.png' width="160"></div>
-                <img src='images/meta_analysis_forest_plot.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function metaanalysis_start() {
-                  document.getElementById('metaanalysis_image').style.opacity = "1";
-                }
-
-                function metaanalysis_stop() {
-                  document.getElementById('metaanalysis_image').style.opacity = "0";
-                }
-                metaanalysis_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.mdpi.com/2072-6643/14/6/1170">
-                <papertitle>Meta-Analysis of Randomized Clinical Trials Evaluating Effectiveness of a Multivitamin Supplementation against Oxidative Stress in Healthy Subjects</papertitle>
-              </a>
-              <br>
-              <strong>Seoyoung Lee*</strong>,
-		    Iksoo Huh*, Seunghee Kang, Yea-eun Nam, Youngseo Cho, Md Kamruzzaman, Jina Hong, Oran Kwon, Taesung Park
-              <br>
-              <em>Nutrients</em>, 2022 &nbsp <font color=#FF8080><strong>(Issue Cover)</strong></font>
-              <br>
-              <a href="https://www.mdpi.com/2072-6643/14/6/1170">paper</a>
-              <p></p>
             </td>
           </tr>
 					
