--- a/index.html
+++ b/index.html
@@ -70,35 +70,34 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		
-         <tr onmouseout="learning_to_wear_stop()" onmouseover="learning_to_wear_start()">
+         <tr onmouseout="bassl_stop()" onmouseover="bassl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='learning_to_wear_image'>
-                  <img src='images/learning_to_wear2.png' width="160"></div>
-                <img src='images/learning_to_wear1.png' width="160">
+                <div class="two" id='bassl_image'>
+                  <img src='images/bassl_img_1.png' width="160"></div>
+                <img src='images/bassl_img_2.png' width="160">
               </div>
               <script type="text/javascript">
-                function learning_to_wear_start() {
-                  document.getElementById('learning_to_wear_image').style.opacity = "1";
+                function bassl_start() {
+                  document.getElementById('bassl_image').style.opacity = "1";
                 }
 
-                function learning_to_wear_stop() {
-                  document.getElementById('learning_to_wear_image').style.opacity = "0";
+                function bassl_stop() {
+                  document.getElementById('bassl_image').style.opacity = "0";
                 }
-                learning_to_wear_stop()
+                bassl_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.bmvc2022.org/programme/papers/#:~:text=272.%20Learning%20to,Seoul%20National%20University)*">
-                <papertitle>Learning to Wear: Details-Preserved Virtual Try-on via Disentangling Clothes and Wearer</papertitle>
+              <a href="https://arxiv.org/abs/2201.05277">
+                <papertitle>Boundary-aware Self-supervised Learning for Video Scene Segmentation</papertitle>
               </a>
               <br>
-              Sangho Lee, <strong>Seoyoung Lee</strong>,
-		    Joonseok Lee
+              Jonghwan Mun, Minchul Shin, Gunsoo Han, Sangho Lee, <strong>Seongsu Ha</strong>, Joonseok Lee, Eun-Sol Kim
               <br>
-              <em>BMVC</em>, 2022
+              <em>ACCV</em>, 2022
               <br>
-              <a href="https://www.bmvc2022.org/programme/papers/#:~:text=272.%20Learning%20to,Seoul%20National%20University)*">paper</a>
+              <a href="https://arxiv.org/abs/2201.05277">paper</a>
             </td>
           </tr>
 					
