--- a/index.html
+++ b/index.html
@@ -74,16 +74,17 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='bassl_image'>
-                  <img src='images/bassl_img_1.png' width="160"></div>
+                  <img src='images/bassl_img_1.png' width="160">
+                </div>
                 <img src='images/bassl_img_2.png' width="160">
               </div>
               <script type="text/javascript">
                 function bassl_start() {
-                  document.getElementById('bassl_image').style.opacity = "1";
+                  document.getElementById('bassl_image').style.opacity = "0";
                 }
 
                 function bassl_stop() {
-                  document.getElementById('bassl_image').style.opacity = "0";
+                  document.getElementById('bassl_image').style.opacity = "1";
                 }
                 bassl_stop()
               </script>
