--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
+<html lang="en">
+
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
   <title>Seongsu Ha</title>
   <meta name="author" content="Seongsu Ha">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +9,6 @@
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
 </head>
 
-	
 <body>
 	
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -106,8 +106,22 @@
         </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr bgcolor="#ffffd0">
+            <td width="25%">
+              <img src="images/vip_logo.png" alt="VIP logo" width="160" id="vip_logo">
+            </td>
+            <td valign="top" width="75%">
+              <a href="http://viplab.snu.ac.kr/">
+                <papertitle>Visual Information Processing Lab.</papertitle>
+              </a>
+              <p>
+                Mar.2021 ~ Present
+              </p>
+            </td>
+          </tr>
+         </tbody></table>
 
-        </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
@@ -117,9 +131,10 @@
             </td>
           </tr>
         </tbody></table>
+
+
       </td>
     </tr>
   </table>
 </body>
-
 </html>
