--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
          <tr onmouseout="bassl_stop()" onmouseover="bassl_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td width="25%">
               <div class="one">
                 <div class="two" id='bassl_image'>
                   <img src='images/bassl_img_1.png' width="160">
@@ -83,7 +83,7 @@
                 bassl_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td valign="top" width="75%">
               <a href="https://arxiv.org/abs/2201.05277">
                 <papertitle>Boundary-aware Self-supervised Learning for Video Scene Segmentation</papertitle>
               </a>
@@ -106,7 +106,7 @@
         </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr bgcolor="#ffffd0">
+          <tr>
             <td width="25%">
               <img src="images/vip_logo.png" alt="VIP logo" width="160" id="vip_logo">
             </td>
