--- a/index.html
+++ b/index.html
@@ -119,6 +119,19 @@
               </p>
             </td>
           </tr>
+          <tr>
+            <td width="25%">
+              <img src="images/kakaobrain.jpg" alt="KB logo" width="160" id="kb_logo">
+            </td>
+            <td valign="top" width="75%">
+              <a href="https://www.kakaobrain.com/">
+                <papertitle>Kakaobrain</papertitle>
+              </a>
+              <p>
+                Jan.2022 ~ Mar.2022
+              </p>
+            </td>
+          </tr>
          </tbody></table>
 
 
