--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </tr>
           <tr>
             <td width="25%">
-              <img src="images/kakaobrain.jpg" alt="KB logo" width="160" id="kb_logo">
+              <img src="images/kakaobrain.png" alt="KB logo" width="160" id="kb_logo">
             </td>
             <td valign="top" width="75%">
               <a href="https://www.kakaobrain.com/">
