--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
               </p>
             </td>
           </tr>
+          <tr>
+            <td width="25%">
+              <img src="images/perform_logo.png" alt="KB logo" width="160" id="perform_logo">
+            </td>
+            <td valign="top" width="75%">
+              <a href="https://www.perform.illinois.edu/">
+                <papertitle>Perform Research Group</papertitle>
+              </a>
+              <p>
+                Jun.2018 ~ Sep.2018
+              </p>
+            </td>
+          </tr>
          </tbody></table>
 
 
