--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </td>
             <td valign="top" width="75%">
               <a href="http://viplab.snu.ac.kr/">
-                <papertitle>Visual Information Processing Lab.</papertitle>
+                <papertitle>Graduate Researcher, Visual Information Processing Lab.</papertitle>
               </a>
               <p>
                 Mar.2021 ~ Present
@@ -125,7 +125,7 @@
             </td>
             <td valign="top" width="75%">
               <a href="https://www.kakaobrain.com/">
-                <papertitle>Kakaobrain</papertitle>
+                <papertitle>Research Intern, Kakaobrain</papertitle>
               </a>
               <p>
                 Jan.2022 ~ Mar.2022
@@ -138,7 +138,7 @@
             </td>
             <td valign="top" width="75%">
               <a href="https://www.perform.illinois.edu/">
-                <papertitle>Perform Research Group</papertitle>
+                <papertitle>Research Assistant, Perform Research Group</papertitle>
               </a>
               <p>
                 Jun.2018 ~ Sep.2018
