--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
                 <img src='images/dadnerf_img_2.png' width="160">
               </div>
               <script type="text/javascript">
-                function bassl_start() {
+                function dadnerf_start() {
                   document.getElementById('dadnerf_image').style.opacity = "0";
                 }
 
-                function bassl_stop() {
+                function dadnerf_stop() {
                   document.getElementById('dadnerf_image').style.opacity = "1";
                 }
-                bassl_stop()
+                dadnerf_stop()
               </script>
             </td>
             <td valign="top" width="75%">
-              <a href="https://arxiv.org/abs/2201.05277">
-                <papertitle>Disentangled Audio-Driven NeRF: Talking Head Generation with Detailed Identity-Specific Micro expressions</papertitle>
-              </a>
+              
+              <papertitle>Disentangled Audio-Driven NeRF: Talking Head Generation with Detailed Identity-Specific Micro expressions</papertitle>
+              
               <br>
               Seoyoung Lee*, <strong>Seongsu Ha</strong>*, Joonseok Lee
               <br>
