--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:sha17@snu.ac.kr">Email</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/seongsu-ha-944403254/">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/seongsu-ha-944403254/">LinkedIn</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
