--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center"><name>Seongsu Ha</name></p>
               <p>
-              I am a Master's student at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
+              I am a PhD student at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
               advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>.
-              Previously, I received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign.
+              Previously, I received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign, and Master's degree in Data Science from Seoul National University.
               </p>
               <p>
               My research interest lies in the areas of computer vision and machine learning.
@@ -140,6 +140,8 @@
         </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+		
           <tr>
             <td width="25%">
               <img src="images/vip_logo.png" alt="VIP logo" width="160" id="vip_logo">
@@ -153,6 +155,21 @@
               </p>
             </td>
           </tr>
+
+          <tr>
+            <td width="25%">
+              <img src="images/twelvelabs_log.jpeg" alt="TL logo" width="160" id="tl_logo">
+            </td>
+            <td valign="top" width="75%">
+              <a href="https://twelvelabs.io/">
+                <papertitle>ML Research Intern, Twelve Labs.</papertitle>
+              </a>
+              <p>
+                June.2023 ~ Present
+              </p>
+            </td>
+          </tr>
+		
           <tr>
             <td width="25%">
               <img src="images/kakaobrain.png" alt="KB logo" width="160" id="kb_logo">
