--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
           <tr>
             <td width="25%">
-              <img src="images/twelvelabs_log.jpeg" alt="TL logo" width="160" id="tl_logo">
+              <img src="images/twelvelabs_logo.jpeg" alt="TL logo" width="160" id="tl_logo">
             </td>
             <td valign="top" width="75%">
               <a href="https://twelvelabs.io/">
