--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center"><name>Seongsu Ha</name></p>
               <p>
-              I am a PhD student at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
-              advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>.
-              Previously, I received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign, and Master's degree in Data Science from Seoul National University.
-              </p>
-              <p>
-              My research interest lies in the areas of computer vision and machine learning.
-              Specifically, I am interested in improving the quality of multi-modal representations for various downstream applications, such as video scene boundary segmentation and visual grounding. 
+              	I am a deep learning researcher interested in computer vision and machiner learning, 
+	      	specifically in improving the quality of multi-modal representations and their interactions for various downstream applications, such as video understanding, video scene boundary segmentation and visual grounding.
+		Previously, I received Master's degree in Data Science at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
+              	advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>. I al so received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign, and Master's degree in Data Science from Seoul National University.
               </p>
               <p style="text-align:center">
                 <a href="mailto:sha17@snu.ac.kr">Email</a> &nbsp/&nbsp
