--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <papertitle>Graduate Researcher, Visual Information Processing Lab.</papertitle>
               </a>
               <p>
-                Mar.2021 ~ Present
+                Mar.2021 ~ Jun. 2023
               </p>
             </td>
           </tr>
