--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <br>
               <em>CVPRW</em>, 2023
               <br>
-              paper
+              <a href="https://sightsound.org/">paper</a>
             </td>
           </tr>
         </tbody></table>
