--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
               <p style="text-align:center"><name>Seongsu Ha</name></p>
               <p>
               	I am a deep learning researcher interested in computer vision and machine learning.
-	      	Specifically my research interest lies in improving the quality of multi-modal representations and their interactions for various downstream applications, such as video understanding, video scene boundary segmentation and visual grounding.
+	      	Specifically my research interest lies in improving the quality of multi-modal representations and their interactions for various downstream applications,
+		      such as video understanding, video corpus moment retrieval, video scene boundary segmentation and visual grounding.
 		Previously, I received Master's degree in Data Science at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
               	advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>. I also received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign.
               </p>
@@ -138,17 +139,23 @@
         </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+		
           <tr>
             <td width="25%">
               <img src="images/twelvelabs_logo.jpeg" alt="TL logo" width="160" id="tl_logo">
             </td>
             <td valign="top" width="75%">
+	      <a href="https://twelvelabs.io/">
+                <papertitle>ML Research Scientist, Twelve Labs.</papertitle>
+              </a>
+              <p>
+                Sep.2023 ~ Present
+              </p>
               <a href="https://twelvelabs.io/">
                 <papertitle>ML Research Intern, Twelve Labs.</papertitle>
               </a>
               <p>
-                June.2023 ~ Present
+                June.2023 ~ Sep.2023
               </p>
             </td>
           </tr>
