--- a/index.html
+++ b/index.html
@@ -64,6 +64,40 @@
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr onmouseout="nemo_stop()" onmouseover="nemo_start()">
+            <td width="25%">
+              <div class="one">
+                <div class="two" id='nemo_image'>
+                  <img src='images/nemo_img_1.png' width="160">
+                </div>
+                <img src='images/nemo_img_2.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function dadnerf_start() {
+                  document.getElementById('nemo_image').style.opacity = "0";
+                }
+
+                function dadnerf_stop() {
+                  document.getElementById('nemo_image').style.opacity = "1";
+                }
+                dadnerf_stop()
+              </script>
+            </td>
+            <td valign="top" width="75%">
+              
+              <papertitle>Finding NeMo: Negative-mined Mosaic Augmentation for Referring Image Segmentation</papertitle>
+              
+              <br>
+              <strong>Seongsu Ha</strong>*, Donghwa Kim*, Chaeyun Kim*, Junho Lee, Sangho Lee, Joonseok Lee
+              <br>
+              <em>ECCV</em>, 2024
+              <br>
+              paper
+            </td>
+          </tr>
+        </tbody></table>
+	
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
          <tr onmouseout="dadnerf_stop()" onmouseover="dadnerf_start()">
             <td width="25%">
               <div class="one">
