--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 <img src='images/nemo_img_2.png' width="160">
               </div>
               <script type="text/javascript">
-                function dadnerf_start() {
+                function nemo_start() {
                   document.getElementById('nemo_image').style.opacity = "0";
                 }
 
-                function dadnerf_stop() {
+                function nemo_stop() {
                   document.getElementById('nemo_image').style.opacity = "1";
                 }
-                dadnerf_stop()
+                nemo_stop()
               </script>
             </td>
             <td valign="top" width="75%">
@@ -93,6 +93,40 @@
               <em>ECCV</em>, 2024
               <br>
               paper
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr onmouseout="mlsv_stop()" onmouseover="mlsv_start()">
+            <td width="25%">
+              <div class="one">
+                <div class="two" id='mlsv_image'>
+                  <img src='images/mlsv_img_1.png' width="160">
+                </div>
+                <img src='images/mlsv_img_2.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function mlsv_start() {
+                  document.getElementById('mlsv_image').style.opacity = "0";
+                }
+
+                function mlsv_stop() {
+                  document.getElementById('mlsv_image').style.opacity = "1";
+                }
+                mlsv_stop()
+              </script>
+            </td>
+            <td valign="top" width="75%">
+              
+              <papertitle>Towards a Complete Benchmark on Video Moment Localization</papertitle>
+              
+              <br>
+              Jinyeong Chae, Donghwa Kim, Kwanseok Kim, Doyeon Lee, Sangho Lee, <strong>Seongsu Ha</strong>, Jonghwan Mun, Woo-Young Kang, Byungseok Roh, Joonseok Lee    
+              <br>
+              <em>AISTATS</em>, 2024
+              <br>
+              <a href="http://www.joonseok.net/papers/aistats24_mlsv.pdf">paper</a>
             </td>
           </tr>
         </tbody></table>
