--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <papertitle>Towards a Complete Benchmark on Video Moment Localization</papertitle>
               
               <br>
-              Jinyeong Chae, Donghwa Kim, Kwanseok Kim, Doyeon Lee, Sangho Lee, <strong>Seongsu Ha</strong>, Jonghwan Mun, Woo-Young Kang, Byungseok Roh, Joonseok Lee    
+              Jinyeong Chae*, Donghwa Kim*, Kwanseok Kim, Doyeon Lee, Sangho Lee, <strong>Seongsu Ha</strong>, Jonghwan Mun, Woo-Young Kang, Byungseok Roh, Joonseok Lee    
               <br>
               <em>AISTATS</em>, 2024
               <br>
@@ -192,7 +192,7 @@
                 <papertitle>Boundary-aware Self-supervised Learning for Video Scene Segmentation</papertitle>
               </a>
               <br>
-              Jonghwan Mun, Minchul Shin, Gunsoo Han, Sangho Lee, <strong>Seongsu Ha</strong>, Joonseok Lee, Eun-Sol Kim
+              Jonghwan Mun*, Minchul Shin*, Gunsoo Han, Sangho Lee, <strong>Seongsu Ha</strong>, Joonseok Lee, Eun-Sol Kim
               <br>
               <em>ACCV</em>, 2022
               <br>
