--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <td width="25%">
               <div class="one">
                 <div class="two" id='pegasus_image'>
-                  <img src='images/pegasus_img_1.png' width="160">
+                  <img src='images/pegasus_img_1.PNG' width="160">
                 </div>
-                <img src='images/pegasus_img_2.png' width="160">
+                <img src='images/pegasus_img_2.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function pegasus_start() {
@@ -129,6 +129,38 @@
               <em>arXiv</em>, 24.04
               <br>
               <a href="https://arxiv.org/pdf/2404.14687">paper</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr onmouseout="marengo26_stop()" onmouseover="marengo26_start()">
+            <td width="25%">
+              <div class="one">
+                <div class="two" id='marengo_image'>
+                  <img src='images/marengo_img_1.PNG' width="160">
+                </div>
+                <img src='images/marengo_img_2.PNG' width="160">
+              </div>
+              <script type="text/javascript">
+                function marengo_start() {
+                  document.getElementById('marengo_image').style.opacity = "0";
+                }
+
+                function marengo_stop() {
+                  document.getElementById('marengo_image').style.opacity = "1";
+                }
+                marengo_stop()
+              </script>
+            </td>
+            <td valign="top" width="75%">
+              
+              <papertitle>Marengo-2.6</papertitle>
+              
+              <br>
+              Twelve Labs
+              <br>
+              <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-6">blog</a>
             </td>
           </tr>
         </tbody></table>
