--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <td width="25%">
               <div class="one">
                 <div class="two" id='pegasus_image'>
-                  <img src='images/pegasus_img_1.PNG' width="160">
+                  <img src='images/pegasus_img_1.png' width="160">
                 </div>
-                <img src='images/pegasus_img_2.PNG' width="160">
+                <img src='images/pegasus_img_2.png' width="160">
               </div>
               <script type="text/javascript">
                 function pegasus_start() {
@@ -138,9 +138,9 @@
             <td width="25%">
               <div class="one">
                 <div class="two" id='marengo_image'>
-                  <img src='images/marengo_img_1.PNG' width="160">
+                  <img src='images/marengo_img_1.png' width="160">
                 </div>
-                <img src='images/marengo_img_2.PNG' width="160">
+                <img src='images/marengo_img_2.png' width="160">
               </div>
               <script type="text/javascript">
                 function marengo_start() {
