--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                 <img src='images/marengo_image_2.png' width="160">
               </div>
               <script type="text/javascript">
-                function marengo_start() {
+                function marengo26_start() {
                   document.getElementById('marengo_image').style.opacity = "0";
                 }
 
-                function marengo_stop() {
+                function marengo26_stop() {
                   document.getElementById('marengo_image').style.opacity = "1";
                 }
-                marengo_stop()
+                marengo26_stop()
               </script>
             </td>
             <td valign="top" width="75%">
@@ -126,6 +126,8 @@
               <br>
               Twelve Labs
               <br>
+	      <em>Tech Blog</em>, 24.03
+	      <br>
               <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-6">blog</a>
             </td>
           </tr>
