--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
               <heading>News</heading>
               <p>
                 <ul>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on referring image segmentation accepted to <a href="https://eccv.ecva.net/", target="_blank">ECCV 2024</a></li>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on video frame sampling accepted to <a href="https://bmvc2024.org/", target="_blank">BMVC 2024</a></li>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2024: Paper on video moment localization accepted to <a href="https://aistats.org/aistats2024/dates.html", target="_blank">AISTATS 2024</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on referring image segmentation accepted at <a href="https://eccv.ecva.net/", target="_blank">ECCV 2024</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on video frame sampling accepted at <a href="https://bmvc2024.org/", target="_blank">BMVC 2024</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2024: Paper on video moment localization accepted at <a href="https://aistats.org/aistats2024/dates.html", target="_blank">AISTATS 2024</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2023: Started working at Twelve Labs as research scientist</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2023: Started working at Twelve Labs as research intern</li>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">05/2023: Paper on talking head generation accepted to <a href="https://sightsound.org/", target="_blank">Sight and Sound, CVPR Workshop 2023</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">05/2023: Paper on talking head generation accepted at <a href="https://sightsound.org/", target="_blank">Sight and Sound, CVPR Workshop 2023</a></li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on <a href="https://arxiv.org/abs/2201.05277", target="_blank">scene boundary segmentation</a> accepted to <a href="https://accv2022.org/en/", target="_blank">ACCV 2022</a></li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2022: Started working at KakaoBrain as research intern</li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2021: Started MS in Data Science at <a href="https://gsds.snu.ac.kr/", target="_blank">Seoul National University Graduate School of Data Science</a></li>
@@ -291,9 +291,9 @@
               </script>
             </td>
             <td valign="top" width="75%">
-              <a href="https://arxiv.org/abs/2201.05277">
-                <papertitle>Boundary-aware Self-supervised Learning for Video Scene Segmentation</papertitle>
-              </a>
+		    
+              <papertitle>Boundary-aware Self-supervised Learning for Video Scene Segmentation</papertitle>
+		    
               <br>
               Jonghwan Mun*, Minchul Shin*, Gunsoo Han, Sangho Lee, <strong>Seongsu Ha</strong>, Joonseok Lee, Eun-Sol Kim
               <br>
