--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2023: Started working at Twelve Labs as research scientist</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2023: Started working at Twelve Labs as research intern</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">05/2023: Paper on talking head generation accepted at <a href="https://sightsound.org/", target="_blank">Sight and Sound, CVPR Workshop 2023</a></li>
-                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on <a href="https://arxiv.org/abs/2201.05277", target="_blank">scene boundary segmentation</a> accepted to <a href="https://accv2022.org/en/", target="_blank">ACCV 2022</a></li>
+                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on <a href="https://arxiv.org/abs/2201.05277", target="_blank">scene boundary segmentation</a> accepted at <a href="https://accv2022.org/en/", target="_blank">ACCV 2022</a></li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2022: Started working at KakaoBrain as research intern</li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2021: Started MS in Data Science at <a href="https://gsds.snu.ac.kr/", target="_blank">Seoul National University Graduate School of Data Science</a></li>
                 </ul>
