--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <heading>News</heading>
               <p>
                 <ul>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2024: TWLV-1, analysis and insights from holistic evaluation on video foundation models, is released! <a href="https://arxiv.org/abs/2408.11318", target="_blank">Tech Report</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2024: TWLV-1, analysis and insights from evaluation on video foundation models, is released! <a href="https://arxiv.org/abs/2408.11318", target="_blank">Tech Report</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on referring image segmentation accepted at <a href="https://eccv.ecva.net/", target="_blank">ECCV 2024</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on video frame sampling accepted at <a href="https://bmvc2024.org/", target="_blank">BMVC 2024</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2024: Pegasus-1, a new SOTA video-to-text generative model, is released! <a href="https://arxiv.org/abs/2404.14687", target="_blank">Tech Report</a></li>
