--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
               <heading>News</heading>
               <p>
                 <ul>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2024: TWLV-1, analysis and insights from evaluation on video foundation models, is released! <a href="https://arxiv.org/abs/2408.11318", target="_blank">Tech Report</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2024: TWLV-1, analysis and insights from evaluation on video foundation models, released! <a href="https://arxiv.org/abs/2408.11318", target="_blank">Tech Report</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on referring image segmentation accepted at <a href="https://eccv.ecva.net/", target="_blank">ECCV 2024</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on video frame sampling accepted at <a href="https://bmvc2024.org/", target="_blank">BMVC 2024</a></li>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2024: Pegasus-1, a new SOTA video-to-text generative model, is released! <a href="https://arxiv.org/abs/2404.14687", target="_blank">Tech Report</a></li>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2024: Marengo-2.6, a new SOTA video foundation model for any-to-any search, is released! <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-6", target="_blank">Tech Blog</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2024: Pegasus-1, a new SOTA video-to-text generative model, released! <a href="https://arxiv.org/abs/2404.14687", target="_blank">Tech Report</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2024: Marengo-2.6, a new SOTA video foundation model for any-to-any search, released! <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-6", target="_blank">Tech Blog</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2024: Paper on video moment localization accepted at <a href="https://aistats.org/aistats2024/dates.html", target="_blank">AISTATS 2024</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2023: Started working at Twelve Labs as research scientist</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2023: Started working at Twelve Labs as research intern</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">05/2023: Paper on talking head generation accepted at <a href="https://sightsound.org/", target="_blank">Sight and Sound, CVPR Workshop 2023</a></li>
-                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on <a href="https://arxiv.org/abs/2201.05277", target="_blank">scene boundary segmentation</a> accepted at <a href="https://accv2022.org/en/", target="_blank">ACCV 2022</a></li>
+                  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">06/2022: Paper on scene boundary segmentation accepted at <a href="https://accv2022.org/en/", target="_blank">ACCV 2022</a></li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2022: Started working at KakaoBrain as research intern</li>
                   <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">03/2021: Started MS in Data Science at <a href="https://gsds.snu.ac.kr/", target="_blank">Seoul National University Graduate School of Data Science</a></li>
                 </ul>
