--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <br>
               <em>ECCV</em>, 2024
               <br>
-              paper
+              <a href="http://joonseok.net/papers/eccv24_nemo.pdf">paper</a>
             </td>
           </tr>
         </tbody></table>
@@ -234,7 +234,7 @@
               <br>
               <em>BMVC</em>, 2024
               <br>
-              paper
+              <a href="http://www.joonseok.net/papers/bmvc24_sosampler.pdf">paper</a>
             </td>
           </tr>
         </tbody></table>
