--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <papertitle>Finding NeMo: Negative-mined Mosaic Augmentation for Referring Image Segmentation</papertitle>
               
               <br>
-              <strong>Seongsu Ha</strong>*, Donghwa Kim*, Chaeyun Kim*, Junho Lee, Sangho Lee, Joonseok Lee
+              <strong>Seongsu Ha</strong>*, Chaeyun Kim*, Donghwa Kim*, Junho Lee, Sangho Lee, Joonseok Lee
               <br>
               <em>ECCV</em>, 2024
               <br>
