--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <heading>News</heading>
               <p>
                 <ul>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2025: Started working at EverEx as research engineer</li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2025: Started working at EverEx as AI research engineer</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">12/2024: Marengo-2.7, a new SOTA video foundation model of multivector representation, released! <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-7", target="_blank">Tech Blog</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2024: TWLV-1, analysis and insights from evaluation on video foundation models, released! <a href="https://arxiv.org/abs/2408.11318", target="_blank">Tech Report</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">07/2024: Paper on referring image segmentation accepted at <a href="https://eccv.ecva.net/", target="_blank">ECCV 2024</a></li>
