--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <papertitle>AI research engineer, EverEx</papertitle>
               </a>
               <p>
-                Jan.2025 ~ 
+                Jan.2025 ~ Present
               </p>
             </td>
           </tr>
@@ -410,7 +410,7 @@
                 <papertitle>ML Research Scientist, Twelve Labs.</papertitle>
               </a>
               <p>
-                Sep.2023 ~ Present
+                Sep.2023 ~ Jan.2025
               </p>
               <a href="https://twelvelabs.io/">
                 <papertitle>ML Research Intern, Twelve Labs.</papertitle>
