--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <p style="text-align:center"><name>Seongsu Ha</name></p>
               <p>
               	I am a deep learning researcher interested in computer vision and machine learning.
-	      	Specifically my research interest lies in improving the quality of multi-modal representations and their interactions for various downstream applications,
+	      	Specifically my research interest lies in improving the quality of multi-modal representations and their interactions for various downstream applications to widen the capability boundaries,
 		      such as video understanding, video corpus moment retrieval, video scene boundary segmentation and visual grounding.
 		Previously, I received Master's degree in Data Science at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
               	advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>. I also received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign.
@@ -397,7 +397,7 @@
                 <papertitle>AI research engineer, EverEx</papertitle>
               </a>
               <p>
-                Jan.2025 ~ Present
+                Jan.2025 ~ May.2025
               </p>
             </td>
           </tr>
