--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center"><name>Seongsu Ha</name></p>
               <p>
-              	I am a deep learning researcher interested in computer vision and machine learning.
+              	A deep learning researcher interested in computer vision and machine learning.
 	      	Specifically my research interest lies in improving the quality of multi-modal representations and their interactions for various downstream applications to widen the capability boundaries,
 		      such as video understanding, video corpus moment retrieval, video scene boundary segmentation and visual grounding.
-		Currently, I am a PhD Stduent at the University of North Carolina at Chapel Hill, advised by Professor <a href="https://www.gedasbertasius.com/">Gedas Bertasius</a>.
+		Currently, I am a PhD student at the University of North Carolina at Chapel Hill, advised by Prof. <a href="https://www.gedasbertasius.com/">Gedas Bertasius</a>.
 		Previously, I received Master's degree in Data Science at <a href="https://en.snu.ac.kr/">Seoul National University</a> <a href="http://viplab.snu.ac.kr/">Visual Information Processing Lab</a>,
               	advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>. I also received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign.
               </p>
