--- a/index.html
+++ b/index.html
@@ -391,6 +391,21 @@
 
           <tr>
             <td width="25%">
+              <img src="images/unc.png" alt="UNC logo" width="160" id="unc_logo">
+            </td>
+            <td valign="top" width="75%">
+              <a href="https://www.gedasbertasius.com/">
+                <papertitle>Graduate Researcher, Gedas' Group</papertitle>
+              </a>
+              <p>
+                Aug.2025 ~ Present
+              </p>
+            </td>
+          </tr>
+
+		
+          <tr>
+            <td width="25%">
               <img src="images/everex.png" alt="EverEx logo" width="160" id="everex_logo">
             </td>
             <td valign="top" width="75%">
