--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
           <tr>
             <td width="25%">
-              <img src="images/unc.png" alt="UNC logo" width="160" id="unc_logo">
+              <img src="images/unc.PNG" alt="UNC logo" width="160" id="unc_logo">
             </td>
             <td valign="top" width="75%">
               <a href="https://www.gedasbertasius.com/">
