--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </td>
             <td valign="top" width="75%">
               <a href="https://www.gedasbertasius.com/">
-                <papertitle>Graduate Researcher, Gedas' Group</papertitle>
+                <papertitle>Graduate Researcher, Video Understanding Group</papertitle>
               </a>
               <p>
                 Aug.2025 ~ Present
